cluster/istio-controlplane/base/gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-istio
  namespace: istio-system
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.10.218
  selector:
    istio: ingressgateway
  ports:
    - name: status-port
      port: 15021
      targetPort: 15021
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
    - name: tls
      port: 8443
      targetPort: 8443
