cluster/istio-controlplane/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
    - name: default
      hostname: "*.bergtobias.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
