cluster/istio-controlplane/base/lan-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lan-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.lan.bergtobias.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: lan-bergtobias-com-cert
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.lan.bergtobias.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: tls
      protocol: TLS
      port: 8443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
