cluster/istio-controlplane/base/http-filter.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
  namespace: istio-system
spec:
  parentRefs:
    - name: gateway
      sectionName: http
      namespace: istio-system
  hostnames:
    - "*.bergtobias.com"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
